--- a/PHPSamples/PDO/connection.ini
+++ b/PHPSamples/PDO/connection.ini
@@ -2,8 +2,11 @@
 driver = pgsql
 host = localhost
 ;port = 3306
-schema = db_schema
+schema = comptoir
+
+[admin_user]
 username = postgres
 password = postgres
 
+[clients_users]
 ;ceci est un commentaire
